Bug 944646 - Check the DrawTarget type before downcasting PathBuilders. r=mattwoodrow

Previously the ScaledFontBase::CopyGlyphsToBuilder methods in the
various ScaledFont subclasses static_cast-ed the passed in PathBuilder
objects without checking which sort of DrawSurface they were created by.